2004-08-25  Paolo Carlini  <pcarlini@suse.de>
	* htdocs/cvs.html: Mention libstdcxx_so_7-branch.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -295,6 +295,14 @@ particular releases or snapshots or the latest snapshot.  </p>
   maintained by Andrew Haley.  Patches should be marked with the
   tag <code>[BC ABI]</code> in the subject line.</dd>
 
+  <dt>libstdcxx_so_7-branch</dt>
+  <dd>This is a branch for experimental work on the C++ Runtime Library
+  (libstdc++-v3) beyond the current version 6 library ABI. Paolo Carlini
+  &lt;<a href="mailto:pcarlini@suse.de">pcarlini@suse.de</a>&gt;
+  and Benjamin Kosnik
+  &lt;<a href="mailto:bkoz@redhat.com">bkoz@redhat.com</a>&gt; are
+  maintaining this branch.</dd>
+
 </dl>
 
 <h3><a name="distrobranches">Distribution Branches</a></h3>
