Add enable-checking=assert, update gcc_assert coding convention

--- a/htdocs/branching.html
+++ b/htdocs/branching.html
@@ -59,12 +59,8 @@ actually called from cron.)</li>
 <a href="http://gcc.gnu.org/translation.html#submit">Send them
 to the translation project</a>.</li>
 
-<li>Update the file <code>gcc/configure.in</code> so that
-<code>--disable-checking</code> is the default.</li>
-
-<li>For branches of GCC 3.4 or later, update the file
-<code>gcc/configure.in</code> so that <code>--disable-werror</code> is
-the default.</li>
+<li>Update the file <code>gcc/configure.ac</code> so that the
+<code>is_release</code> shell variable is 1.</li>
 
 <li>Create new versions in Bugzilla corresponding to the new mainline 
 version.  This can be accomplished by choosing products, choosing gcc, 
