Added entry for gcjwebplugin.

--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -249,6 +249,18 @@ rneled%2fGtk2">Screenshots</a> are here.
       </tr>
       <!-- End pdftk -->
 
+      <!-- gcjwebplugin -->
+      <tr valign="top">
+        <td><b><a href="http://www.nongnu.org/gcjwebplugin/">gcjwebplugin</a></b></td>
+
+	<td>gcjwebplugin is a web browser plugin to execute Java (tm) applets.
+	It supports Firefox, Galeon, Mozilla, Opera and many more browsers.
+	</td>
+
+	<td><a href="mailto:konqueror@gmx.de">Michael Koch</a></td>
+      </tr>
+      <!-- End gcjwebplugin -->
+
       </table>
 
 </body>
