add link to Dijkstra archive

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -497,6 +497,8 @@ names.
        <a href="http://www.fh-jena.de/~kleine/history/">Historic Documents in
        Computer Science</a> by Karl Kleine
      </li>
+
+     <li><a href="http://www.cs.utexas.edu/users/EWD/">The writings of Edsger W. Dijkstra (RIP)</a></li>
    </ul>
    </li>
 
