update ABI comments

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -56,14 +56,15 @@
 
 <h4>C++</h4>
   <ul>
-    <li>There are now no known differences between the C++ ABI
-        implemented in GCC and the multi-vendor standard.  We believe that
-        the ABI for the C++ standard library is now stable and will not
-        change in future versions of the compiler.  However, hard
-        experience has taught us to be cautious; it is possible that more
-        problems will be found.  It is our intention to make changes to
-        the ABI only if they are necessary for correct compilation of C++,
-        as opposed to conformance to the ABI documents.</li>
+    <li>GCC 3.2 fixed serveral differences between the C++ ABI implemented
+        in GCC and the multi-vendor standard, but more have been found
+        since the release.  3.2.1 adds a new warning, <code>-Wabi</code>,
+        to warn about code which is affected by these bugs.
+	We will fix these bugs in some future release, once we are
+        confident that all have been found; until then, it is our intention
+        to make changes to the ABI only if they are necessary for correct
+        compilation of C++, as opposed to conformance to the ABI
+        documents.</li>
     <li>For details on how to build an ABI compliant compiler for
         GNU/Linux systems, check the <a href="c++-abi.html">common C++ ABI
         page</a>.</li>
