--- a/htdocs/gcc-3.5/changes.html
+++ b/htdocs/gcc-3.5/changes.html
@@ -80,13 +80,13 @@
         well as a reduction in size of up to 10%. Also, check the new
         <a href="#visibility"><code>-fvisibility</code> option</a>.</li>
 
-    <li>The compiler now uses the library interface specified by the C++
-        ABI for thread-safe initialization of function-scope static
-        variables.  Most users should leave this alone, but embedded
-        programmers may want to disable this by specifying
+    <li>The compiler now uses the library interface specified by the <a
+        href=http://www.codesourcery.com/cxx-abi/>C++ ABI</a> for
+        thread-safe initialization of function-scope static variables.
+        Most users should leave this alone, but embedded programmers may
+        want to disable this by specifying
         <code>-fno-threadsafe-statics</code> for a small savings in code
-        size.</li>
- </ul>
+        size.</li> </ul>
 
 <h3>Java</h3>
 
