* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/gui-compare/libgcj-classpath-compare.html
+++ b/htdocs/java/gui-compare/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-08-10.</p>
+2004-08-31.</p>
 <p>Only lists gui files (AWT, Swing, and gtk-peer)</p>
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
@@ -15,12 +15,117 @@ differences are currently required.</p>
 
 <table width="100%" border="1" cellspacing="0" cellpadding="1">
 <tr><th align="left">Class</th> <th>Merge Status</th> </tr>
-<tr> <td class="libgcj-only">gnu.java.awt.peer.gtk.TestAWT</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkMenuBarPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkMenuBarPeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkMenuItemPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkMenuItemPeer.diff">Diff</a></td> </tr>
 <tr> <td class="libgcj-only">gnu.java.awt.peer.gtk.Test</td> <td class="libgcj-only">GCJ-only</td> </tr>
-<tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
+<tr> <td class="libgcj-only">gnu.java.awt.peer.gtk.TestAWT</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="needsmerge">java.awt.Canvas</td> <td class="needsmerge"><a href="compare/java.awt.Canvas.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.Color</td> <td class="needsmerge"><a href="compare/java.awt.Color.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.Component</td> <td class="needsmerge"><a href="compare/java.awt.Component.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.Container</td> <td class="needsmerge"><a href="compare/java.awt.Container.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.DefaultFocusTraversalPolicy</td> <td class="needsmerge"><a href="compare/java.awt.DefaultFocusTraversalPolicy.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.DefaultKeyboardFocusManager</td> <td class="needsmerge"><a href="compare/java.awt.DefaultKeyboardFocusManager.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.KeyboardFocusManager</td> <td class="needsmerge"><a href="compare/java.awt.KeyboardFocusManager.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.Label</td> <td class="needsmerge"><a href="compare/java.awt.Label.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.MenuBar</td> <td class="needsmerge"><a href="compare/java.awt.MenuBar.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.MenuItem</td> <td class="needsmerge"><a href="compare/java.awt.MenuItem.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.RenderingHints</td> <td class="needsmerge"><a href="compare/java.awt.RenderingHints.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.Window</td> <td class="needsmerge"><a href="compare/java.awt.Window.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.geom.Arc2D</td> <td class="needsmerge"><a href="compare/java.awt.geom.Arc2D.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.geom.Area</td> <td class="needsmerge"><a href="compare/java.awt.geom.Area.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.geom.Ellipse2D</td> <td class="needsmerge"><a href="compare/java.awt.geom.Ellipse2D.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.geom.Line2D</td> <td class="needsmerge"><a href="compare/java.awt.geom.Line2D.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.peer.MenuBarPeer</td> <td class="needsmerge"><a href="compare/java.awt.peer.MenuBarPeer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.AbstractButton</td> <td class="needsmerge"><a href="compare/javax.swing.AbstractButton.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.ActionMap</td> <td class="needsmerge"><a href="compare/javax.swing.ActionMap.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.Box</td> <td class="needsmerge"><a href="compare/javax.swing.Box.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.ButtonGroup</td> <td class="needsmerge"><a href="compare/javax.swing.ButtonGroup.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.ComboBoxEditor</td> <td class="needsmerge"><a href="compare/javax.swing.ComboBoxEditor.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.ComboBoxModel</td> <td class="needsmerge"><a href="compare/javax.swing.ComboBoxModel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.DefaultButtonModel</td> <td class="needsmerge"><a href="compare/javax.swing.DefaultButtonModel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.DefaultComboBoxModel</td> <td class="needsmerge"><a href="compare/javax.swing.DefaultComboBoxModel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.DefaultListCellRenderer</td> <td class="needsmerge"><a href="compare/javax.swing.DefaultListCellRenderer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.DefaultListSelectionModel</td> <td class="needsmerge"><a href="compare/javax.swing.DefaultListSelectionModel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.InputMap</td> <td class="needsmerge"><a href="compare/javax.swing.InputMap.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JColorChooser</td> <td class="needsmerge"><a href="compare/javax.swing.JColorChooser.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JComboBox</td> <td class="needsmerge"><a href="compare/javax.swing.JComboBox.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JComponent</td> <td class="needsmerge"><a href="compare/javax.swing.JComponent.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JDesktopPane</td> <td class="needsmerge"><a href="compare/javax.swing.JDesktopPane.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JLabel</td> <td class="needsmerge"><a href="compare/javax.swing.JLabel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JList</td> <td class="needsmerge"><a href="compare/javax.swing.JList.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JPopupMenu</td> <td class="needsmerge"><a href="compare/javax.swing.JPopupMenu.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JRadioButton</td> <td class="needsmerge"><a href="compare/javax.swing.JRadioButton.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JScrollPane</td> <td class="needsmerge"><a href="compare/javax.swing.JScrollPane.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JSpinner</td> <td class="needsmerge"><a href="compare/javax.swing.JSpinner.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JTabbedPane</td> <td class="needsmerge"><a href="compare/javax.swing.JTabbedPane.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JTable</td> <td class="needsmerge"><a href="compare/javax.swing.JTable.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JTextArea</td> <td class="needsmerge"><a href="compare/javax.swing.JTextArea.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JTextField</td> <td class="needsmerge"><a href="compare/javax.swing.JTextField.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JViewport</td> <td class="needsmerge"><a href="compare/javax.swing.JViewport.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.KeyStroke</td> <td class="needsmerge"><a href="compare/javax.swing.KeyStroke.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.MutableComboBoxModel</td> <td class="needsmerge"><a href="compare/javax.swing.MutableComboBoxModel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.ScrollPaneLayout</td> <td class="needsmerge"><a href="compare/javax.swing.ScrollPaneLayout.diff">Diff</a></td> </tr>
+<tr> <td class="classpath-only">javax.swing.SpinnerListModel</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">javax.swing.SpinnerModel</td> <td class="needsmerge"><a href="compare/javax.swing.SpinnerModel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.SpinnerNumberModel</td> <td class="needsmerge"><a href="compare/javax.swing.SpinnerNumberModel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.SwingUtilities</td> <td class="needsmerge"><a href="compare/javax.swing.SwingUtilities.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.Timer</td> <td class="needsmerge"><a href="compare/javax.swing.Timer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.ToolTipManager</td> <td class="needsmerge"><a href="compare/javax.swing.ToolTipManager.diff">Diff</a></td> </tr>
+<tr> <td class="libgcj-only">javax.swing.TransferHandler</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="needsmerge">javax.swing.colorchooser.AbstractColorChooserPanel</td> <td class="needsmerge"><a href="compare/javax.swing.colorchooser.AbstractColorChooserPanel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.colorchooser.ColorChooserComponentFactory</td> <td class="needsmerge"><a href="compare/javax.swing.colorchooser.ColorChooserComponentFactory.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.colorchooser.DefaultColorSelectionModel</td> <td class="needsmerge"><a href="compare/javax.swing.colorchooser.DefaultColorSelectionModel.diff">Diff</a></td> </tr>
+<tr> <td class="libgcj-only">javax.swing.colorchooser.DefaultHSBChooserPanel</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="libgcj-only">javax.swing.colorchooser.DefaultPreviewPanel</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="libgcj-only">javax.swing.colorchooser.DefaultRGBChooserPanel</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="libgcj-only">javax.swing.colorchooser.DefaultSwatchChooserPanel</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicArrowButton</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicArrowButton.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicButtonListener</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicButtonListener.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicButtonUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicButtonUI.diff">Diff</a></td> </tr>
+<tr> <td class="libgcj-only">javax.swing.plaf.basic.BasicColorChooserUI</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="libgcj-only">javax.swing.plaf.basic.BasicComboBoxEditor</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="libgcj-only">javax.swing.plaf.basic.BasicComboBoxRenderer</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="libgcj-only">javax.swing.plaf.basic.BasicComboBoxUI</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="libgcj-only">javax.swing.plaf.basic.BasicComboPopup</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="libgcj-only">javax.swing.plaf.basic.BasicFormattedTextFieldUI</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicLookAndFeel</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicLookAndFeel.diff">Diff</a></td> </tr>
+<tr> <td class="libgcj-only">javax.swing.plaf.basic.BasicPasswordFieldUI</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicPopupMenuUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicPopupMenuUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicSliderUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicSliderUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicSpinnerUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicSpinnerUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicSplitPaneUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicSplitPaneUI.diff">Diff</a></td> </tr>
+<tr> <td class="libgcj-only">javax.swing.plaf.basic.BasicTableHeaderUI</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="libgcj-only">javax.swing.plaf.basic.BasicTableUI</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="libgcj-only">javax.swing.plaf.basic.BasicTextAreaUI</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicTextUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicTextUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicToggleButtonUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicToggleButtonUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicToolBarUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicToolBarUI.diff">Diff</a></td> </tr>
+<tr> <td class="libgcj-only">javax.swing.plaf.basic.ComboPopup</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="needsmerge">javax.swing.table.DefaultTableCellRenderer</td> <td class="needsmerge"><a href="compare/javax.swing.table.DefaultTableCellRenderer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.table.DefaultTableColumnModel</td> <td class="needsmerge"><a href="compare/javax.swing.table.DefaultTableColumnModel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.table.DefaultTableModel</td> <td class="needsmerge"><a href="compare/javax.swing.table.DefaultTableModel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.table.JTableHeader</td> <td class="needsmerge"><a href="compare/javax.swing.table.JTableHeader.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.AbstractDocument</td> <td class="needsmerge"><a href="compare/javax.swing.text.AbstractDocument.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.AttributeSet</td> <td class="needsmerge"><a href="compare/javax.swing.text.AttributeSet.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.DefaultCaret</td> <td class="needsmerge"><a href="compare/javax.swing.text.DefaultCaret.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.DefaultEditorKit</td> <td class="needsmerge"><a href="compare/javax.swing.text.DefaultEditorKit.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.DefaultHighlighter</td> <td class="needsmerge"><a href="compare/javax.swing.text.DefaultHighlighter.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.FieldView</td> <td class="needsmerge"><a href="compare/javax.swing.text.FieldView.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.JTextComponent</td> <td class="needsmerge"><a href="compare/javax.swing.text.JTextComponent.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.PlainView</td> <td class="needsmerge"><a href="compare/javax.swing.text.PlainView.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.Segment</td> <td class="needsmerge"><a href="compare/javax.swing.text.Segment.diff">Diff</a></td> </tr>
+<tr> <td class="libgcj-only">javax.swing.text.SimpleAttributeSet</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="libgcj-only">javax.swing.text.StyleConstants</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="libgcj-only">javax.swing.text.StyleContext</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="libgcj-only">javax.swing.text.TabSet</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="libgcj-only">javax.swing.text.TabStop</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.TextAction</td> <td class="needsmerge"><a href="compare/javax.swing.text.TextAction.diff">Diff</a></td> </tr>
+<tr> <td class="libgcj-only">javax.swing.text.Utilities</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.View</td> <td class="needsmerge"><a href="compare/javax.swing.text.View.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMainThread.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkMainThread.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMenuBarPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkMenuBarPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMenuItemPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkMenuItemPeer.c.diff">Diff</a></td> </tr>
 </table>
 </body>
 </html>
