* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-08-31.</p>
+2004-09-01.</p>
 <p>Only lists non-gui files (NO AWT, Swing, or gtk-peer)</p>
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
@@ -98,11 +98,11 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.security.SecureClassLoader</td> <td class="needsmerge"><a href="compare/java.security.SecureClassLoader.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.security.cert.X509CRLSelector</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.security.cert.X509CertSelector</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="needsmerge">java.text.AttributedString</td> <td class="needsmerge"><a href="compare/java.text.AttributedString.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.Collator</td> <td class="needsmerge"><a href="compare/java.text.Collator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.Calendar</td> <td class="needsmerge"><a href="compare/java.util.Calendar.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.PropertyPermissionCollection</td> <td class="needsmerge"><a href="compare/java.util.PropertyPermissionCollection.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.TimeZone</td> <td class="needsmerge"><a href="compare/java.util.TimeZone.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.zip.Deflater</td> <td class="needsmerge"><a href="compare/java.util.zip.Deflater.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterConstants</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterEngine</td> <td class="classpath-only">Classpath-only</td> </tr>
