--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -1117,6 +1117,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>sparc-sun-solaris2.8</td>
 <td>&nbsp;</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-09/msg00103.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-01/msg00972.html">3.3.2</a>
 </td>
 </tr>
