* htdocs/gcc-3.5/changes.html: Document new ceil, floor, 	nearbyint, rint and trunc x87 intrinsics (and their float 	and long double variants).

--- a/htdocs/gcc-3.5/changes.html
+++ b/htdocs/gcc-3.5/changes.html
@@ -124,6 +124,11 @@
         double variants) are now implemented as inline x87 intrinsics
         when using <code>-ffast-math</code>.</li>
 
+    <li>The <code>ceil</code>, <code>floor</code>, <code>nearbyint</code>,
+	<code>rint</code> and <code>trunc</code> mathematical builtins
+	(and their float and long double variants) are now implemented as
+	inline x87 intrinsics when using <code>-ffast-math</code>.</li>
+
     <li>The x87's <code>fsincos</code> instruction is now used automatically
         with <code>-ffast-math</code> when calculating both the sin and cos
         of the same argument.</li>
