--- a/htdocs/java/gui-compare/libgcj-classpath-compare.html
+++ b/htdocs/java/gui-compare/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-09-01.</p>
+2004-09-04.</p>
 <p>Only lists gui files (AWT, Swing, and gtk-peer)</p>
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
@@ -15,8 +15,23 @@ differences are currently required.</p>
 
 <table width="100%" border="1" cellspacing="0" cellpadding="1">
 <tr><th align="left">Class</th> <th>Merge Status</th> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GdkGraphics</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GdkGraphics.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GdkGraphics2D</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GdkGraphics2D.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkButtonPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkButtonPeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkCheckboxPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkCheckboxPeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkComponentPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkComponentPeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkDialogPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkDialogPeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkFileDialogPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkFileDialogPeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkFramePeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkFramePeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkGenericPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkGenericPeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkImagePainter</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkImagePainter.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkLabelPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkLabelPeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkListPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkListPeer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkMenuBarPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkMenuBarPeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkMenuComponentPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkMenuComponentPeer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkMenuItemPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkMenuItemPeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkTextAreaPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkTextAreaPeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkTextFieldPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkTextFieldPeer.diff">Diff</a></td> </tr>
 <tr> <td class="libgcj-only">gnu.java.awt.peer.gtk.Test</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="libgcj-only">gnu.java.awt.peer.gtk.TestAWT</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="needsmerge">java.awt.Canvas</td> <td class="needsmerge"><a href="compare/java.awt.Canvas.diff">Diff</a></td> </tr>
@@ -25,16 +40,15 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.awt.Container</td> <td class="needsmerge"><a href="compare/java.awt.Container.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.DefaultFocusTraversalPolicy</td> <td class="needsmerge"><a href="compare/java.awt.DefaultFocusTraversalPolicy.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.DefaultKeyboardFocusManager</td> <td class="needsmerge"><a href="compare/java.awt.DefaultKeyboardFocusManager.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.FontMetrics</td> <td class="needsmerge"><a href="compare/java.awt.FontMetrics.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.Frame</td> <td class="needsmerge"><a href="compare/java.awt.Frame.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.KeyboardFocusManager</td> <td class="needsmerge"><a href="compare/java.awt.KeyboardFocusManager.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.Label</td> <td class="needsmerge"><a href="compare/java.awt.Label.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.MenuBar</td> <td class="needsmerge"><a href="compare/java.awt.MenuBar.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.MenuItem</td> <td class="needsmerge"><a href="compare/java.awt.MenuItem.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.Panel</td> <td class="needsmerge"><a href="compare/java.awt.Panel.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.RenderingHints</td> <td class="needsmerge"><a href="compare/java.awt.RenderingHints.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.Window</td> <td class="needsmerge"><a href="compare/java.awt.Window.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.awt.geom.Arc2D</td> <td class="needsmerge"><a href="compare/java.awt.geom.Arc2D.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.awt.geom.Area</td> <td class="needsmerge"><a href="compare/java.awt.geom.Area.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.awt.geom.Ellipse2D</td> <td class="needsmerge"><a href="compare/java.awt.geom.Ellipse2D.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.awt.geom.Line2D</td> <td class="needsmerge"><a href="compare/java.awt.geom.Line2D.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.peer.MenuBarPeer</td> <td class="needsmerge"><a href="compare/java.awt.peer.MenuBarPeer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.AbstractButton</td> <td class="needsmerge"><a href="compare/javax.swing.AbstractButton.diff">Diff</a></td> </tr>
@@ -53,6 +67,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">javax.swing.JDesktopPane</td> <td class="needsmerge"><a href="compare/javax.swing.JDesktopPane.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JLabel</td> <td class="needsmerge"><a href="compare/javax.swing.JLabel.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JList</td> <td class="needsmerge"><a href="compare/javax.swing.JList.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JMenu</td> <td class="needsmerge"><a href="compare/javax.swing.JMenu.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JPopupMenu</td> <td class="needsmerge"><a href="compare/javax.swing.JPopupMenu.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JRadioButton</td> <td class="needsmerge"><a href="compare/javax.swing.JRadioButton.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JScrollPane</td> <td class="needsmerge"><a href="compare/javax.swing.JScrollPane.diff">Diff</a></td> </tr>
@@ -88,6 +103,7 @@ differences are currently required.</p>
 <tr> <td class="libgcj-only">javax.swing.plaf.basic.BasicComboBoxUI</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="libgcj-only">javax.swing.plaf.basic.BasicComboPopup</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="libgcj-only">javax.swing.plaf.basic.BasicFormattedTextFieldUI</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicGraphicsUtils</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicGraphicsUtils.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicLookAndFeel</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicLookAndFeel.diff">Diff</a></td> </tr>
 <tr> <td class="libgcj-only">javax.swing.plaf.basic.BasicPasswordFieldUI</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicPopupMenuUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicPopupMenuUI.diff">Diff</a></td> </tr>
@@ -122,9 +138,24 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">javax.swing.text.TextAction</td> <td class="needsmerge"><a href="compare/javax.swing.text.TextAction.diff">Diff</a></td> </tr>
 <tr> <td class="libgcj-only">javax.swing.text.Utilities</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="needsmerge">javax.swing.text.View</td> <td class="needsmerge"><a href="compare/javax.swing.text.View.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGlyphVector.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GdkGlyphVector.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GdkGraphics.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics2D.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GdkGraphics2D.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkButtonPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkButtonPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkCheckboxPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkCheckboxPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkComponentPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkComponentPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkEmbeddedWindowPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkEmbeddedWindowPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkEvents.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkEvents.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkGenericPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkGenericPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkLabelPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkLabelPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkListPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkListPeer.c.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMainThread.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkMainThread.c.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMenuBarPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkMenuBarPeer.c.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMenuItemPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkMenuItemPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkPanelPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkPanelPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkTextAreaPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkTextAreaPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkTextFieldPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkTextFieldPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkWindowPeer.c.diff">Diff</a></td> </tr>
 </table>
 </body>
 </html>
