Add testsuite results for sparc-unknown-linux-gnu/Debian, hppa-unknown-linux-gnu/Debian, powerpc-linux/Debian, i486-linux/Debian, ia64-linux/Debian, mips-linux/Debian, mipsel-linux/Debian, s390-linux/Debian, alpha-linux/Debian, m68k-linux/Debian, arm-linux/Debian. By Ramana Radhakrishnan <ramana.r@gmail.com>.

--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -73,6 +73,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>alpha-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00125.html">3.3.4</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-08/msg00679.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00431.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00908.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00794.html">3.3.2</a>,
@@ -139,6 +141,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>arm-unknown-linux-gnu</td>
 <td>Debian</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00126.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00470.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01160.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00907.html">3.3.3</a>,
@@ -163,6 +166,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>hppa-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00165.html">3.3.4</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-08/msg00418.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00532.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00433.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00905.html">3.3.3</a>,
@@ -331,6 +336,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>i486-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00129.html">3.3.4</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-08/msg00532.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00475.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00752.html">3.3.2</a>
 </td>
@@ -720,6 +727,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>ia64-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00130.html">3.3.4</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-08/msg00641.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00474.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00222.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01116.html">3.3.3</a>,
@@ -807,6 +816,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>mips-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-08/msg00680.html">3.3.4</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-08/msg00712.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00472.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00958.html">3.3.3</a>
 </td>
@@ -816,6 +827,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>mipsel-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00163.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00434.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00906.html">3.3.3</a>
 </td>
@@ -833,6 +845,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>m68k-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-08/msg00713.html">3.3.4</a>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00531.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00432.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01228.html">3.3.3</a>,
@@ -954,6 +967,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>powerpc-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00128.html">3.3.4</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-08/msg00416.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00476.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00771.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00366.html">3.3.1</a>,
@@ -1013,6 +1028,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>s390-ibm-linux-gnu</td>
 <td>Debian</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00127.html">3.3.4</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-08/msg00760.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01009.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00792.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00345.html">3.3.1</a>,
@@ -1178,6 +1195,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>sparc-unknown-linux-gnu</td>
 <td>Debian</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00164.html">3.3.4</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-08/msg01235.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00471.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg00904.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00837.html">3.3.2</a>,
